<resources>
  <string name="app_name">Sno</string>
  <string name="title_profile">Profile</string>
  <string name="title_resort">Resorts</string>
  <string name="title_accelerometer">Accelerometer</string>
  <string name="login_failure_message">Unable to sign in with the provided credentials</string>
  <string name="sign_out">Sign out</string>
  <string name="accelerometer">Accelerometer</string>
  <string name="mph">MPH</string>
  <string name="favorite_ski_resorts">Favorite Ski Resorts</string>
  <string name="days_logged">Days Logged</string>
  <string name="max_speed">Max Speed</string>
  <string name="distance_traveled">Distance Traveled</string>
  <string name="gear">Gear</string>
  <string name="ski_resort">Ski Resort</string>
  <string name="title_settings">Settings</string>
  <string name="preferences">Preferences</string>
  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="weather_label">Weather</string>
  <string name="ski_resort_image">Ski Resort Image</string>
  <string name="add_item">Add Item</string>
  <string name="add">Add</string>
  <string name="twenty_four">24</string>
  <string name="add_gear">Add Gear</string>
  <string name="name">Name</string>
  <string name="type_of_gear_">Type of Gear (jacket, boots, etc.)</string>
</resources>