<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/navigation_resort">

  <fragment
    android:id="@+id/navigation_accelerometer"
    android:label="@string/title_accelerometer"
    android:name="edu.cnm.deepdive.sno.controller.AccelerometerFragment"
    tools:layout="@layout/fragment_accelerometer"/>

  <fragment
    android:id="@+id/navigation_resort"
    android:label="@string/title_resort"
    android:name="edu.cnm.deepdive.sno.controller.ResortFragment"
    tools:layout="@layout/fragment_resort">

    <action
      android:id="@+id/show_weather"
      app:destination="@id/navigation_weather"
      app:popUpTo="@id/navigation_resort">

      <argument
        android:name="latitude"
        app:argType="float"/>
      <argument
        android:name="longitude"
        app:argType="float"/>
    </action>
  </fragment>

  <fragment
    android:id="@+id/navigation_weather"
    android:label="@string/weather_label"
    android:name="edu.cnm.deepdive.sno.controller.WeatherFragment"
    tools:layout="@layout/fragment_weather">

    <argument
      android:name="latitude"
      app:argType="float"/>
    <argument
      android:name="longitude"
      app:argType="float"/>
  </fragment>

  <fragment
    android:id="@+id/navigation_profile"
    android:label="@string/title_profile"
    android:name="edu.cnm.deepdive.sno.controller.ProfileFragment"
    tools:layout="@layout/fragment_profile">

    <action
      android:id="@+id/open_dialog"
      app:destination="@id/navigation_gear"/>
    <argument
      android:name="gear_id"
      app:argType="long"/>
  </fragment>

  <fragment
    android:id="@+id/navigation_settings"
    android:label="@string/title_settings"
    android:name="edu.cnm.deepdive.sno.controller.PreferenceFragment"/>

  <dialog
    android:id="@+id/navigation_gear"
    android:name="edu.cnm.deepdive.sno.controller.GearDialogFragment"
    tools:layout="@layout/fragment_gear_dialog">

    <argument
      android:name="gear_id"
      app:argType="long"
      android:defaultValue="0L"/>
  </dialog>

</navigation>