<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".controller.ProfileFragment">

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/horizontal_guideline_fullscreen"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.5"/>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/vertical_guideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintGuide_percent="0.5"/>

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/horizontal_guideline_half"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.85"/>

  <TextView
    android:id="@+id/favorites_title"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:text="@string/favorite_ski_resorts"
    style="@style/Title"/>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/favorites_recycler_view"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/favorites_title"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/gear"/>

  <TextView
    android:id="@+id/gear"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/horizontal_guideline_fullscreen"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/gear"
    style="@style/Title"/>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/gear_recycler_view"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toBottomOf="@id/gear"
    app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_half"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>

  <TextView
    android:id="@+id/days_logged"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_half"
    app:layout_constraintStart_toEndOf="@id/vertical_guideline"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/days_logged"
    style="@style/Subtitle"/>

  <TextView
    android:id="@+id/distance_traveled"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/horizontal_guideline_half"
    app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
    android:text="@string/distance_traveled"
    style="@style/Subtitle"/>

  <TextView
    android:id="@+id/distance_value"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
    app:layout_constraintTop_toBottomOf="@id/distance_traveled"
    app:layout_constraintBottom_toBottomOf="parent"
    style="@style/Subtitle"/>

  <TextView
    android:id="@+id/days_logged_value"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="@id/vertical_guideline"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@id/days_logged"
    app:layout_constraintBottom_toBottomOf="parent"
    style="@style/Subtitle"/>

</androidx.constraintlayout.widget.ConstraintLayout>